UI E2E: robust repo fallback selector; backend-enabled test gated by E2E_WITH_BACKEND; AuthService uses REST_BASE; add backend CI workflow
Co-Authored-By: Akinori Ishii <yumioka> <akinori@sanwa-c.com>